--- a/scorekeeper/src/components/Player/Player.css
+++ b/scorekeeper/src/components/Player/Player.css
@@ -1,5 +1,5 @@
 .Player {
-    background: #D1C4E9;
+    background: #f9b8f3;
     border: 1px solid #FF66CC;
     padding: 10px;
     margin: 5px 0;
