--- a/scorekeeper/src/components/Player/Player.css
+++ b/scorekeeper/src/components/Player/Player.css
@@ -18,7 +18,7 @@
 .Player__button {
     width: 5%;
     text-align: center;
-    background: #6666FF;
+    background: #d988fc;
     cursor: pointer;
     border: 1px solid #6f42c1;
     border-radius: 3px;
